--- a/app/src/main/res/layout/useractiviteis_layout.xml
+++ b/app/src/main/res/layout/useractiviteis_layout.xml
@@ -56,6 +56,8 @@
                     android:layout_marginBottom="3dp"
                     android:textColor="@color/gray"
                     android:textSize="12sp"
+                    android:layout_marginLeft="5dp"
+
                     />
             </RelativeLayout>
 
