--- a/app/src/main/res/layout/userqoutes_layout.xml
+++ b/app/src/main/res/layout/userqoutes_layout.xml
@@ -108,6 +108,7 @@
                 android:layout_marginBottom="3dp"
                 android:textColor="@color/gray"
                 android:textSize="12sp"
+                android:layout_marginLeft="5dp"
 
                 />
         </RelativeLayout>
