--- a/app/src/main/res/layout/userqoutes_layout.xml
+++ b/app/src/main/res/layout/userqoutes_layout.xml
@@ -24,7 +24,7 @@
 
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
@@ -108,7 +108,7 @@
                 android:layout_marginBottom="3dp"
                 android:textColor="@color/gray"
                 android:textSize="12sp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="15dp"
 
                 />
         </RelativeLayout>
