--- a/app/src/main/res/layout/activity_single_book.xml
+++ b/app/src/main/res/layout/activity_single_book.xml
@@ -426,6 +426,7 @@
 
             />
         <Button
+            android:id="@+id/btnAddReview"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="إضافة مراجعة"
