--- a/app/src/main/res/layout/activity_error_qr_reader.xml
+++ b/app/src/main/res/layout/activity_error_qr_reader.xml
@@ -48,6 +48,7 @@
         android:hint="Example : A12"
         />
     <Button
+        android:id="@+id/btnEnter"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:background="@color/green"
@@ -55,7 +56,23 @@
         android:textColor="#fff"
         android:onClick="EnterBookId"
         />
+        <TextView
+            android:id="@+id/tvNologin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:textAlignment="center"
+            android:padding="4dp"
+            android:layout_marginBottom="20dp"
+            android:textColor="@color/red"
+            android:layout_marginTop="30dp"
+            android:text="يجب أن تقوم بتسجيل الدخول حتى تتمكن من إضافة إقتباس"
+            android:visibility="gone"
 
+
+            />
     </LinearLayout>
 
     <ProgressBar
