--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,8 +19,7 @@
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
-           android:orientation="vertical"
-           >
+           android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
@@ -138,6 +137,18 @@
                    android:text="تسجيل حساب جديد"
                    android:textAllCaps="false"
                    android:textColor="#fff"
+                   android:textSize="12sp"
+                   />
+               <Button
+                   android:id="@+id/btnToMan"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_alignParentBottom="true"
+                   android:background="@null"
+                   android:onClick="GoToMain"
+                   android:text="المتابعة بدون تسجيل حساب"
+                   android:textAllCaps="false"
+                   android:textColor="@color/green1"
                    android:textSize="12sp"
                    />
            </LinearLayout>
