--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -208,10 +208,12 @@
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
+           android:id="@+id/llCurrentBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="35dp"
+           android:visibility="gone"
            >
            <TextView
                android:layout_width="match_parent"
