--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,8 +30,7 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
-       android:visibility="gone"
-       >
+       android:visibility="gone">
 
        <RelativeLayout
            android:layout_width="match_parent"
@@ -81,13 +80,17 @@
              android:layout_marginStart="5dp"
              android:layout_marginEnd="5dp">
              <TextView
-                 android:layout_width="wrap_content"
+                 android:layout_width="match_parent"
                  android:layout_height="wrap_content"
-                 android:layout_gravity="center"
                  android:text="الأكثر قراءة"
-                 android:layout_alignParentRight="true"
                  android:typeface="serif"
-                 android:layout_marginBottom="8dp"/>
+                 android:layout_gravity="center"
+                 android:textSize="20sp"
+                 android:textStyle="bold"
+                 android:layout_marginBottom="8dp"
+                 android:textAlignment="center"
+
+                 />
 
 
          </RelativeLayout>
@@ -107,7 +110,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="الاكثر تقييماً"
+        android:text="الأكثر تقييماً"
         android:typeface="serif"
         android:layout_gravity="center"
         android:textSize="20sp"
@@ -140,6 +143,7 @@
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_alignParentRight="true"
+                   android:textSize="18sp"
                    />
 
                <TextView
@@ -202,6 +206,8 @@
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_alignParentRight="true"
+                   android:textSize="18sp"
+
                    />
 
                <TextView
@@ -241,6 +247,8 @@
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_alignParentRight="true"
+                   android:textSize="18sp"
+
                    />
 
                <TextView
