--- a/app/src/main/res/layout/activity_book_borrowing.xml
+++ b/app/src/main/res/layout/activity_book_borrowing.xml
@@ -21,7 +21,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:onClick="GoToBook"
         android:visibility="gone"   >
 
     <ImageView
@@ -29,7 +28,9 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:src="@drawable/defaultbook"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:onClick="GoToBook"
+        />
 
         <TextView
             android:id="@+id/tvBookName"
@@ -41,6 +42,8 @@
             android:textStyle="bold"
             android:textAlignment="center"
             android:layout_gravity="center"
+            android:onClick="GoToBook"
+
             />
         <LinearLayout
             android:layout_width="match_parent"
