--- a/app/src/main/res/layout/userqoutes_layout.xml
+++ b/app/src/main/res/layout/userqoutes_layout.xml
@@ -20,8 +20,17 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:weightSum="5"
-                android:gravity="right">
+                android:gravity="right"
+                >
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/profile_image"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
+                    android:layout_margin="5dp"
+                    app:civ_border_color="#FF000000"
+                    android:layout_marginEnd="10dp"
 
+                    app:civ_border_width="2dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -30,32 +39,27 @@
 
                     <TextView
                         android:id="@+id/tvFullName"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingTop="10dp"
                         android:paddingStart="10dp"
                         android:textSize="15sp"
                         android:textStyle="bold"
+                        android:layout_gravity="right"
+
                         />
                     <TextView
                         android:id="@+id/tvUserName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
-                        android:textSize="11sp"
+                        android:textSize="12sp"
                         android:textColor="@color/gray"
                         android:layout_gravity="right"
                         />
                 </LinearLayout>
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/profile_image"
-                    android:layout_width="56dp"
-                    android:layout_height="56dp"
-                    android:layout_margin="5dp"
-                    android:layout_marginEnd="10dp"
-                    app:civ_border_color="#FF000000"
-                    app:civ_border_width="2dp" />
+
 
 
             </LinearLayout>
@@ -63,13 +67,14 @@
 
             <TextView
                 android:id="@+id/tvquote"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_below="@+id/test"
                 android:textColor="#000"
+                android:gravity="right"
 
                 />
             <LinearLayout
