--- a/app/src/main/res/layout/userreviews_layout.xml
+++ b/app/src/main/res/layout/userreviews_layout.xml
@@ -18,13 +18,22 @@
         android:layout_height="wrap_content"
         android:gravity="right">
 
-
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/profile_image"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            app:civ_border_width="2dp"
+            app:civ_border_color="#FF000000"
+            android:layout_margin="5dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_gravity="right">
+            android:layout_gravity="right"
+            android:gravity="right">
+
             <TextView
                 android:id="@+id/tvFullName"
                 android:layout_width="wrap_content"
@@ -33,7 +42,6 @@
                 android:layout_marginStart="10dp"
                 android:textStyle="bold"
                 android:textSize="16sp"
-                android:text="Osama Alnajm"
                 android:layout_gravity="right"
 
                 />
@@ -46,14 +54,7 @@
                 android:textColor="@color/gray"
                 />
         </LinearLayout>
-        <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/profile_image"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            app:civ_border_width="2dp"
-            app:civ_border_color="#FF000000"
-            android:layout_margin="5dp" />
+
     </LinearLayout>
 
 
