--- a/app/src/main/res/layout/userqoutes_layout.xml
+++ b/app/src/main/res/layout/userqoutes_layout.xml
@@ -3,66 +3,73 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:gravity="right">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+      >
 
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:gravity="right">
 
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:gravity="right">
 
-            <LinearLayout
-                android:id="@+id/test"
-                android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="right"
+        android:layout_gravity="right"
+        >
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_margin="5dp"
+            app:civ_border_color="#FF000000"
+            android:layout_marginEnd="10dp"
+            app:civ_border_width="2dp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvFullName"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="5"
-                android:gravity="right"
-                >
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/profile_image"
-                    android:layout_width="56dp"
-                    android:layout_height="56dp"
-                    android:layout_margin="5dp"
-                    app:civ_border_color="#FF000000"
-                    android:layout_marginEnd="10dp"
-
-                    app:civ_border_width="2dp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/tvFullName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="10dp"
-                        android:paddingStart="10dp"
-                        android:textSize="15sp"
-                        android:textStyle="bold"
-                        android:layout_gravity="right"
-
-                        />
-                    <TextView
-                        android:id="@+id/tvUserName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:textSize="12sp"
-                        android:textColor="@color/gray"
-                        android:layout_gravity="right"
-                        />
-                </LinearLayout>
+                android:paddingTop="10dp"
+                android:paddingStart="10dp"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:layout_gravity="right" />
+            <TextView
+                android:id="@+id/tvUserName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:textSize="12sp"
+                android:textColor="@color/gray"
+                android:layout_gravity="right"
+                />
+        </LinearLayout>
 
 
 
 
-            </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
 
 
             <TextView
