--- a/app/src/main/res/layout/useractiviteis_layout.xml
+++ b/app/src/main/res/layout/useractiviteis_layout.xml
@@ -11,44 +11,41 @@
 
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="right">
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_image"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_margin="5dp"
+        android:layout_marginEnd="10dp"
+        app:civ_border_color="#FF000000"
+        app:civ_border_width="2dp"
+        android:layout_alignParentRight="true"
+        />
+    <TextView
+        android:id="@+id/tvActivites"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:textColor="#FF000000"
+        android:text="asdasdasd asdasdas asdasd"
+        android:layout_toLeftOf="@+id/profile_image"
+        />
 
 
-        <LinearLayout
-            android:id="@+id/test"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="5">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/profile_image"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="56dp"
-                android:layout_margin="5dp"
-                android:layout_marginEnd="10dp"
-                app:civ_border_color="#FF000000"
-                app:civ_border_width="2dp" />
 
-                <TextView
-                    android:id="@+id/tvActivites"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="4"
-                    android:padding="10dp"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:textColor="#FF000000"/>
           
 
 
-        </LinearLayout>
 
 
                 <TextView
                     android:id="@+id/tvDate"
-                    android:layout_below="@+id/test"
+                    android:layout_below="@+id/tvActivites"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
