--- a/app/src/main/res/layout/userqoutes_layout.xml
+++ b/app/src/main/res/layout/userqoutes_layout.xml
@@ -1,131 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:gravity="right">
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-      >
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+	android:gravity="right"
+	android:orientation="vertical"
+	android:padding="10dp"
+    android:layout_gravity="right">
+
+	<androidx.cardview.widget.CardView
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_gravity="right"
+		android:foregroundGravity="right">
 
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:gravity="right">
+		<RelativeLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="right"
+			android:gravity="right">
 
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:gravity="right">
+			<LinearLayout
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:gravity="right"
+                android:id="@+id/test"
+                android:layout_alignParentRight="true">
 
-    <LinearLayout
-        android:id="@+id/test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="right"
-        android:layout_gravity="right"
-        >
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profile_image"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:layout_margin="5dp"
-            app:civ_border_color="#FF000000"
-            android:layout_marginEnd="10dp"
-            app:civ_border_width="2dp" />
+				<LinearLayout
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_gravity="right"
+					android:gravity="right"
+					android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+					<de.hdodenhof.circleimageview.CircleImageView
+						android:id="@+id/profile_image"
+						android:layout_width="56dp"
+						android:layout_height="56dp"
+						android:layout_margin="5dp"
+						android:layout_marginEnd="10dp"
+						app:civ_border_color="#FF000000"
+						app:civ_border_width="2dp"
+                        android:layout_gravity="right"/>
 
-            <TextView
-                android:id="@+id/tvFullName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingTop="10dp"
-                android:paddingStart="10dp"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                android:layout_gravity="right" />
-            <TextView
-                android:id="@+id/tvUserName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:textSize="12sp"
-                android:textColor="@color/gray"
-                android:layout_gravity="right"
-                />
-        </LinearLayout>
+					<LinearLayout
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:orientation="vertical"
+                        android:id="@+id/test1"
+                        android:layout_gravity="right">
 
+						<TextView
+							android:id="@+id/tvFullName"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="right"
+							android:paddingStart="10dp"
+							android:paddingTop="10dp"
+							android:textSize="15sp"
+							android:textStyle="bold" />
 
-
-
-    </LinearLayout>
-</LinearLayout>
+						<TextView
+							android:id="@+id/tvUserName"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="right"
+							android:layout_marginStart="10dp"
+							android:textColor="@color/gray"
+							android:textSize="12sp" />
+					</LinearLayout>
 
 
-            <TextView
-                android:id="@+id/tvquote"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:textSize="16sp"
-                android:textStyle="bold"
+				</LinearLayout>
+			</LinearLayout>
+
+
+			<TextView
+				android:id="@+id/tvquote"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:gravity="right"
+				android:padding="10dp"
+				android:textColor="#000"
+				android:textSize="16sp"
+				android:textStyle="bold"
                 android:layout_below="@+id/test"
-                android:textColor="#000"
-                android:gravity="right"
-
                 />
-            <LinearLayout
-                android:id="@id/test1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_below="@+id/tvquote"
-                android:layout_marginTop="10dp"
-                >
 
-                <TextView
-                    android:id="@+id/tvLikeNumber"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="17sp"
-                    android:textStyle="bold"
-                    />
-                <ImageView
-                    android:id="@+id/imgLikeButton"
-                    android:layout_width="40dp"
-                    android:layout_height="20dp"
-                    android:layout_marginEnd="5dp"
-                    android:src="@drawable/ic_thumb_up_gray_24dp" />
+			<LinearLayout
+				android:id="@id/test1"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_below="@+id/tvquote"
+				android:layout_gravity="center"
+				android:layout_marginTop="10dp"
+				android:gravity="center">
 
+				<TextView
+					android:id="@+id/tvLikeNumber"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:textSize="17sp"
+					android:textStyle="bold" />
 
-            </LinearLayout>
-            <TextView
-                android:id="@+id/tvDate"
-                android:layout_below="@+id/test1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="3dp"
-                android:textColor="@color/gray"
-                android:textSize="12sp"
-                android:layout_marginLeft="15dp"
-
-                />
-        </RelativeLayout>
+				<ImageView
+					android:id="@+id/imgLikeButton"
+					android:layout_width="40dp"
+					android:layout_height="20dp"
+					android:layout_marginEnd="5dp"
+					android:src="@drawable/ic_thumb_up_gray_24dp" />
 
 
-    </androidx.cardview.widget.CardView>
+			</LinearLayout>
+
+			<TextView
+				android:id="@+id/tvDate"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_below="@+id/test1"
+				android:layout_alignParentLeft="true"
+				android:layout_marginLeft="15dp"
+				android:layout_marginEnd="5dp"
+				android:layout_marginBottom="3dp"
+				android:textColor="@color/gray"
+				android:textSize="12sp"
+
+				/>
+		</RelativeLayout>
+
+
+	</androidx.cardview.widget.CardView>
 
 </LinearLayout>
