--- a/app/src/main/res/layout/userreviews_layout.xml
+++ b/app/src/main/res/layout/userreviews_layout.xml
@@ -14,9 +14,9 @@
         android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="right">
+        android:layout_gravity="right">
 
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -25,14 +25,13 @@
             android:layout_height="56dp"
             app:civ_border_width="2dp"
             app:civ_border_color="#FF000000"
-            android:layout_margin="5dp" />
+            android:layout_margin="5dp"
+            android:src="@drawable/logo"   />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="right"
-            android:gravity="right">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvFullName"
@@ -43,16 +42,14 @@
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:layout_gravity="right"
-
-                />
+                 />
             <TextView
                 android:id="@+id/tvUserName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:textSize="12sp"
-                android:textColor="@color/gray"
-                />
+                android:textColor="@color/gray" />
         </LinearLayout>
 
     </LinearLayout>
@@ -65,8 +62,7 @@
         android:padding="10dp"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:textColor="#000"
-        />
+        android:textColor="#000" />
     <RatingBar
         android:id="@+id/rate"
         android:layout_width="wrap_content"
