--- a/app/src/main/res/layout/userreviews_layout.xml
+++ b/app/src/main/res/layout/userreviews_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="7dp">
@@ -16,17 +17,16 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right">
+        android:layout_gravity="right"
+        android:layout_marginTop="5dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profile_image"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            app:civ_border_width="2dp"
-            app:civ_border_color="#FF000000"
             android:layout_margin="5dp"
-            android:src="@drawable/logo"   />
+            app:civ_border_color="#FF000000"
+            app:civ_border_width="2dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
