--- a/app/src/main/res/layout/userreviews_layout.xml
+++ b/app/src/main/res/layout/userreviews_layout.xml
@@ -8,41 +8,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/test"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginTop="5dp">
-
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_margin="5dp"
             app:civ_border_color="#FF000000"
-            app:civ_border_width="2dp" />
-
+            app:civ_border_width="2dp"
+            android:layout_alignParentRight="true"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_toLeftOf="@+id/profile_image">
 
             <TextView
                 android:id="@+id/tvFullName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginStart="10dp"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:layout_gravity="right"
-                 />
+                />
             <TextView
                 android:id="@+id/tvUserName"
                 android:layout_width="wrap_content"
@@ -52,7 +41,17 @@
                 android:textColor="@color/gray" />
         </LinearLayout>
 
-    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_below="@+id/profile_image">
+
+
+
+
 
 
     <TextView
